syntax = "proto3";

option go_package = "proto/accommodation";

service AccommodationService {
  rpc GetAll(AM_GetAll_Request) returns (AM_GetAll_Response) {}
  rpc Create(AM_Create_Request) returns (AM_Create_Response) {}
}

message AM_GetAll_Request {}

message AM_GetAll_Response {
  string data = 1;
}

message AM_Create_Request {
  string name = 1;
  string benefits = 2;
  int32 minGuests = 3;
  int32 maxGuests = 4;
}

message AM_Create_Response {
  string id = 1;
}